tests/negative/test-fail-assign.std
Fatal error: exception Dune__exe__Sast.SemanticError("left hand side of assignment is not a lvalue")
